--- a/requirements (1).txt
+++ b/requirements (1).txt
@@ -1,5 +1,5 @@
-requests>=2.28.0
-pandas>=1.5.0
-scikit-learn>=1.1.0
-joblib>=1.1.0
-streamlit>=1.18.0
+requests
+pandas
+scikit-learn
+joblib
+streamlit
